test_programs/compile_failure/comptime_error_on_macro_expansion/src/other.nr
pub comptime fn expr() -> Quoted {
    quote { 1 + "a" }
}
